# college-football-inventory-system

./: CMakeLists.txt  LICENSE  README.md
docs/: Design.md
src/: InventorySystem.cpp  InventorySystem.h  main.cpp
tests/: test_inventory.cpp
